syntax = "proto3";

package inventorypb;
option go_package = "inventory/inventorypb";

message Account {
	bytes UUID = 1;
	string Name = 2;
	bytes ParentUUID = 3;
	repeated TransactionLine TransactionLines = 4;
}

message Item {
	bytes UUID = 1;
	string Name = 2;
	string Description = 3;
	string Unit = 4;
	repeated TransactionLine TransactionLines = 5;
}

message Transaction {
	bytes UUID = 1;
	string Description = 2;
	sint64 DatetimeMs = 3;
	repeated TransactionLine TransactionLines = 4;
}

message TransactionLine {
	bytes UUID = 1;
	bytes TransactionUUID = 2;
	bytes AccountUUID = 3;
	bytes ItemUUID = 4;
	double Quantity = 5;
	string Unit = 6;
	double Price = 7;
	string Currency = 8;
	string Note = 9;
}

message BalanceHistoryReferences {
	bytes TransactionLineUUID = 1;
	bytes TransactionUUID = 2;
	bytes AccountUUID = 3;
	bytes ItemUUID = 4;
}

message BalanceHistory {
	bytes UUID = 1;
	repeated string Path = 2;
	BalanceHistoryReferences references = 3;
	bytes Unit = 4;
	double Quantity = 5;
	double AvgCost = 6;
	double Value = 7;
	sint64 DatetimeMs = 8;
	double TransactionPrice = 9;
	double MarketPrice = 10;
	string Currency = 11;
	double MarketValue = 12;
	string Description = 13;
}

message UnitConversions {
	string FromUnit = 1;
	string ToUnit = 2;
	double Factor = 3;
	sint64 DatetimeMs = 4;
}

message CurrencyConversions {
	string FromCurrency = 1;
	string ToCurrency = 2;
	double Rate = 3;
	sint64 DatetimeMs = 4;
}

message MarketPrices {
	bytes ItemUUID = 1;
	sint64 DatetimeMs = 2;
	double Price = 3;
	string Unit = 4;
	string Currency = 5;
}

message Packet {
	bytes UUID = 1;
	sint32 Type = 2;
	map<string, bytes> Meta = 3;
	map<string, bytes> Body = 4;
}
